--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Docker</title>
+    <title>Docker-Reinhard</title>
 </head>
 <body>
     <H1>Hier geht es um Docker ...</H1>
